--- a/Client/src/styles.scss
+++ b/Client/src/styles.scss
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap.min.css";
+@import url('https://fonts.googleapis.com/css?family=Raleway:200,400,700');
+
+*, body {
+    font-family: 'Raleway', sans-serif;
+}
