Thursday first commit, home now works

--- a/Client/src/app/components/signup/signup.component.html
+++ b/Client/src/app/components/signup/signup.component.html
@@ -13,5 +13,5 @@
   <input type="radio" name="hasRole" [value]="Admin">Admin
   <br>
   <input type="radio" name="hasRole" [value]="SuperAdmin">SuperAdmin
-  <button (click)="">Sign Up</button>
+  <button (click)="signup()">Sign Up</button>
 </form>
