--- a/Client/src/app/components/home/home.component.html
+++ b/Client/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <p>
   home works!
 </p>
-<app-signup></app-signup>
-<app-login></app-login>
+<!-- <app-signup></app-signup> -->
+<!-- <app-login></app-login> -->
