--- a/Client/src/app/components/signup/signup.component.html
+++ b/Client/src/app/components/signup/signup.component.html
@@ -1,17 +1,17 @@
 <form class="form-control">
   <p>Email
-    <input type="text" name="email" [value]="email" required />
+    <input type="text" name="email" [(ngModel)]="email" placeholder ="info@casalector.es" required>
   </p>
   <p>Name
-    <input type="text" name="name" [value]="name" required />
+    <input type="text" name="name" [(ngModel)]="name" placeholder="Dulce Chacón" required>
   </p>
   <p>Password
-    <input type="password" name="password" [value]="Password" required />
+    <input type="password" name="password" [(ngModel)]="Password" required>
   </p>
-  <input type="radio" name="hasRole" [value]="Employee">Employee
+  <input type="radio" name="hasRole" [(ngModel)]="Employee">Employee
   <br>
-  <input type="radio" name="hasRole" [value]="Admin">Admin
+  <input type="radio" name="hasRole" [(ngModel)]="Admin">Admin
   <br>
-  <input type="radio" name="hasRole" [value]="SuperAdmin">SuperAdmin
+  <input type="radio" name="hasRole" [(ngModel)]="SuperAdmin">SuperAdmin
   <button (click)="signup()">Sign Up</button>
 </form>
