--- a/Client/src/app/components/login/login.component.html
+++ b/Client/src/app/components/login/login.component.html
@@ -3,10 +3,10 @@
 </p>
 <form class="form-control">
   <p>Email
-    <input type="text" name="email" [value]="email" required />
+    <input type="text" name="email" [(ngModel)]="email" required />
   </p>
   <p>Password
-    <input type="password" name="password" [value]="Password" required />
+    <input type="password" name="password" [(ngModel)]="Password" required />
   </p>
-  <button (click) = "login(email, password)">Login</button>
+  <button (click) = "login(email, Password)">Login</button>
 </form>
