--- a/Client/src/app/components/login/login.component.html
+++ b/Client/src/app/components/login/login.component.html
@@ -8,5 +8,5 @@
   <p>Password
     <input type="password" name="password" [(ngModel)]="Password" required />
   </p>
-  <button (click) = "login(email, Password)">Login</button>
+  <button (click) = "login(email, Password)" class="btn btn-success">Login</button>
 </form>
