--- a/Client/src/app/components/signup/signup.component.html
+++ b/Client/src/app/components/signup/signup.component.html
@@ -1,17 +1,15 @@
 <form class="form-control">
   <p>Email
-    <input type="text" name="email" [(ngModel)]="email" placeholder ="info@casalector.es" required>
-  </p>
+    <input type="text" name="email" [(ngModel)]="email" placeholder="info@casalector.es" minlength="6" required>
+  </p><br/>
   <p>Name
-    <input type="text" name="name" [(ngModel)]="name" placeholder="Dulce Chacón" required>
-  </p>
+    <input type="text" name="name" [(ngModel)]="name" placeholder="Dulce Chacón" minlength="3" required>
+  </p><br/>
   <p>Password
-    <input type="password" name="password" [(ngModel)]="Password" required>
-  </p>
-  <input type="radio" name="hasRole" [(ngModel)]="Employee">Employee
-  <br>
-  <input type="radio" name="hasRole" [(ngModel)]="Admin">Admin
-  <br>
-  <input type="radio" name="hasRole" [(ngModel)]="SuperAdmin">SuperAdmin
-  <button (click)="signup()">Sign Up</button>
+    <input type="password" name="password" [(ngModel)]="Password" placeholder="· · · · · ·" minlength="6" required>
+  </p><br/>
+  <input type="radio" name="hasRole" [(ngModel)]="Employee" value="Employee"> Employee<br/>
+  <input type="radio" name="hasRole" [(ngModel)]="Admin" value="Admin">Admin<br/>
+  <input type="radio" name="hasRole" [(ngModel)]="SuperAdmin" value="SuperAdmin"> SuperAdmin <br/>
+  <button (click)="signup()" class="btn btn-success">Sign Up</button>
 </form>
