--- a/Client/src/app/components/home/home.component.html
+++ b/Client/src/app/components/home/home.component.html
@@ -1,14 +1,5 @@
-<p>
-  home works!
-</p>
-<app-signup></app-signup>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<app-login></app-login>
+<div class="container">
+    <button class="btn btn-primary btn-lg" (click)="signup()">Signup</button>
+    <h2>OR</h2>
+    <button class="btn btn-secondary btn-lg" (click)="login()">Log In</button>
+</div>
