--- a/Client/src/app/components/survey/survey.component.html
+++ b/Client/src/app/components/survey/survey.component.html
@@ -1,3 +1,32 @@
-<p>
-  survey works!
-</p>
+<h3>UX Survey</h3>
+<div class="instructions">
+  <p>For the following questions, please mark
+    <em>TRUE</em> or
+    <em>FALSE</em> based on whether or not they appear in the site. Upon clicking
+    <em>TRUE</em>, a menu will drop down so the value can be selected, where one is how difficult it is to find to find the information
+    on the page and five is how easy. Feel free to add comments regarding all of the sections as you go along.</p>
+</div>
+<div class="container">
+<div *ngFor="let element of question; let i = index" class="form-row">
+  <div class="col col-md-4">
+    <h4>{{element}}</h4>
+    <label>True</label>
+    <input [ngStyle]="{'width': '25px'}" type="checkbox" class="form-control" (click)="change(i)" [(ngModel)]="form[i].check">
+    <div [ngStyle]="{'visibility': form[i].hidden}">
+      <select [(ngModel)]="form[i].value">
+        <option disabled>Choose One</option>
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+      </select>
+    </div>
+    <label>False</label>
+    <input type="checkbox" class="form-control" [(ngModel)] = "!form[i].check">
+    <label for="comment">Observations:</label>
+    <input type="text" name="comment" id="comment" [(ngModel)] = "form[i].comment">
+  </div>
+</div>
+<button class="btn btn-success" (click)="show()">Submit Survey</button>
+</div>
