--- a/Client/src/app/components/map/map.component.html
+++ b/Client/src/app/components/map/map.component.html
@@ -1,11 +1,9 @@
-<p>
-  map works!
-</p>
 <div class="container">
   <div class="form-group">
-    <input placeholder="search for location" autocorrect="off" autocapitalize="off" spellcheck="off" type="text" class="form-control" #search [formControl]="searchControl">
+    <input placeholder="Search for location" autocorrect="on" autocapitalize="on" spellcheck="off" type="text" class="form-control" #search [formControl]="searchControl">
   </div>
-  <agm-map [latitude]="latitude" [longitude]="longitude" [scrollwheel]="false" [zoom]="zoom">
+  <agm-map [latitude]="latitude" [longitude]="longitude" [scrollwheel]="passive" [zoom]="zoom">
     <agm-marker [latitude]="latitude" [longitude]="longitude"></agm-marker>
+    <agm-info-window></agm-info-window>
   </agm-map>
 </div>
