--- a/Client/src/app/components/signup/signup.component.html
+++ b/Client/src/app/components/signup/signup.component.html
@@ -1,15 +1,25 @@
-<form class="form-control">
-  <p>Email
-    <input type="text" name="email" [(ngModel)]="email" placeholder="info@casalector.es" minlength="6" required>
-  </p><br/>
-  <p>Name
-    <input type="text" name="name" [(ngModel)]="name" placeholder="Dulce Chacón" minlength="3" required>
-  </p><br/>
-  <p>Password
-    <input type="password" name="password" [(ngModel)]="Password" placeholder="· · · · · ·" minlength="6" required>
-  </p><br/>
-  <input type="radio" name="hasRole" [(ngModel)]="Employee" value="Employee"> Employee<br/>
-  <input type="radio" name="hasRole" [(ngModel)]="Admin" value="Admin">Admin<br/>
-  <input type="radio" name="hasRole" [(ngModel)]="SuperAdmin" value="SuperAdmin"> SuperAdmin <br/>
+<form class="form-group">
+  <div class="form-control">
+    <label> Email </label>
+    <input type="text" name="email" [(ngModel)]="email" ngModel [email]="true" placeholder="info@casalector.es" minlength="6" required>
+  </div>
+  <div class="form-control">
+    <label> Name </label>
+    <input type="text" name="name" [(ngModel)]="name" placeholder="Dulce Chacón" required minlength="3" >
+  </div>
+  <div class="form-control">
+    <label> Password </label>
+    <input type="password" name="password" [(ngModel)]="Password" placeholder="· · · · · ·" required minlength="6" >
+  </div>
+  <div class="form-control">
+    <label> Confirm password </label>
+    <input type="password" name="confirmPassword" [(ngModel)]="confirmPassword" placeholder="· · · · · ·" required minlength="6" >
+  </div>
   <button (click)="signup()" class="btn btn-success">Sign Up</button>
+  <div class="errorE" *ngIf ="errorEmail">
+    <p [ngStyle]="{'color' : 'red'}">Error: Not a valid email.</p>
+  </div>
+  <div class= "errorCP" *ngIf ="errorConfirmPassword">
+    <p [ngStyle]="{'color' : 'red'}">Error: Password not the same.</p>
+  </div>
 </form>
