--- a/Client/src/app/components/library-edit/library-edit.component.html
+++ b/Client/src/app/components/library-edit/library-edit.component.html
@@ -1,15 +1,15 @@
 <form class="form-control" *ngIf="user">
   <p>Name
-    <input type="text" name="Name" [(ngModel)]="Name" placeholder="{{Library.Name}}" required>
+    <input type="text" name="Name"  placeholder="{{Library.Name}}" required>
   </p><br/>
   <p>City
-    <input type="text" name="City" [(ngModel)]="City" placeholder="{{Library.City}}">
+    <input type="text" name="City" placeholder="{{Library.City}}">
   </p><br/>
   <p>Province
-    <input type="text" name="Province" [(ngModel)]="Province" placeholder="{{Library.Province}}">
+    <input type="text" name="Province" placeholder="{{Library.Province}}">
   </p><br/>
   <p>Country
-    <input type="text" name="Country" [(ngModel)]="Country" placeholder="{{Library.Country}}">
+    <input type="text" name="Country" placeholder="{{Library.Country}}">
   </p><br/>
   <p>Location</p>
   <app-map></app-map>
