--- a/Client/src/app/components/home/home.component.html
+++ b/Client/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <button class="btn btn-primary btn-lg" (click)="signup()">Signup</button>
-    <h2>OR</h2>
+    <button class="btn btn-secondary btn-lg" (click)="signup()">Sign up</button>
+    <h3>OR</h3>
     <button class="btn btn-secondary btn-lg" (click)="login()">Log In</button>
 </div>
