--- a/Client/src/app/components/signup/signup.component.scss
+++ b/Client/src/app/components/signup/signup.component.scss
@@ -2,13 +2,13 @@
     display: flex;
     flex-direction: column;
     width: 40%;
-    margin: 0 auto;
+    margin: 80px auto;
     background-color: rgba(145, 145, 145, 0.80);
     border-radius: 2%;
-    box-shadow: -5px 5px 5px 2px rgba(194,188,194,1);
+    box-shadow: -4px 4px 4px 1px rgba(194,188,194,1);
 
     .form-control {
-        margin: 2% auto;
+        margin: 3% auto;
         width: 80%;
         
         label {
@@ -18,7 +18,7 @@
             text-align: right;
         }
         input {
-            margin: 0 2%;
+            margin: 0 1%;
             width: 56%
         }
     }    
