--- a/Client/src/styles.scss
+++ b/Client/src/styles.scss
@@ -5,11 +5,22 @@
 body {
     font-family: 'Raleway', sans-serif;
     font-size: 18px;
-    background-image: url('http://jmasoc.com/wp-content/uploads/2016/06/2012_CasaDelLector_foto11_JMASOC.jpg');
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    background-image: url('../src/assets/oligozha.jpeg');
     background-size: cover;
+    height: 100%;
+    
     h1 {
-        letter-spacing: 1.5px;
-        margin-top: 40px;
-        text-align: center;
+        letter-spacing: 10px;
+        margin: 40px 0 0 40px;
+    }
+    footer {
+        width: 100%;
+        height: 150px;
+        bottom: 0;
+        a {
+            color: grey;
+        }
     }
 }
